Delmar/force-app/main/default/objects/Case/fields/DEL_CcAddress__c.field-meta.xml
<CustomField>
    <fullName>DEL_CcAddress__c</fullName>
    <description>This field is used to store the CC addresses used in the mails. Each address is separated using semicolon(;).</description>
    <label>CC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>