Delmar/force-app/main/default/objects/Case/fields/DEL_ToAddress__c.field-meta.xml
<CustomField>
    <fullName>DEL_ToAddress__c</fullName>
    <description>This field is used to store the email-to-case service address used to create the case.</description>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>