Delmar/force-app/main/default/objects/Case/fields/Visible_in_Community__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to determine which cases are visible in the community - visible to customers</description>
    <label>Visible in Community</label>
    <type>Checkbox</type>
</CustomField>